# android-proof-of-concept-tv

./: README.md
Android-NDK-Projects/: Makefile
Android-NDK-Projects/AstroTV/: Makefile  tqtvd_astrotv.cpp
Android-NDK-Projects/AstroTV_Android/: Makefile  README.TXT
Android-NDK-Projects/AstroTV_Android/include/: tqtvd_astrotv_over_android.h
Android-NDK-Projects/AstroTV_Android/jni/: Android.mk  Application.mk  tqtvd_astrotv_over_android.cpp
Android-NDK-Projects/AstroTV_DTV_Connector/: README.TXT
Android-NDK-Projects/AstroTV_DTV_Connector/inc/: goodbye.h  hello.h
Android-NDK-Projects/AstroTV_DTV_Connector/jni/: Android.mk  Application.mk
Android-NDK-Projects/AstroTV_DTV_Connector/src/: goodbye.cpp  hello.cpp  main.cpp
android-studio-projects/AstroTV_DTV_Connector/: Android.mk
android-studio-projects/AstroTV_DTV_Connector/app/: build.gradle
android-studio-projects/AstroTV_DTV_Connector/app/src/androidTest/java/com/mirakulo/astrotv_dtv_connector/: ExampleInstrumentedTest.java
android-studio-projects/AstroTV_DTV_Connector/app/src/main/: AndroidManifest.xml
android-studio-projects/AstroTV_DTV_Connector/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android-studio-projects/AstroTV_DTV_Connector/app/src/main/java/com/mirakulo/astrotv_dtv_connector/: MainActivity.java
android-studio-projects/AstroTV_DTV_Connector/app/src/main/res/values/: strings.xml
android-studio-projects/AstroTV_DTV_Connector/app/src/test/java/com/mirakulo/astrotv_dtv_connector/: ExampleUnitTest.java
android-studio-projects/AstroTV_DTV_Connector/gradle/wrapper/: gradle-wrapper.properties
